--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class="md:w-1/3 bg-blue-600 p-6 flex flex-col items-center justify-center">
      <img alt="Profile picture of [Your Name] in a professional attire" class="rounded-full mb-4" height="150" src="https://storage.googleapis.com/a1aa/image/rYmyS9i2qsR_-70x40CJ2vc7SRAwbQGcElV6LjKDW54.jpg" width="150"/>
      <h1 class="text-white text-3xl font-bold">
-      [Your Name]
+      [MD Mahfiz Kaif]
      </h1>
      <p class="text-blue-200 text-lg">
-      [Your Profession]
+      [An University Student]
      </p>
     </div>
     <div class="md:w-2/3 p-6">
