--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
       <p class="text-gray-600 mt-2">
        <i class="fas fa-envelope mr-2">
        </i>
-       [Your Email]
+       [mahmudamahir1982@gmail.com]
       </p>
       <p class="text-gray-600 mt-2">
        <i class="fas fa-phone mr-2">
        </i>
-       [Your Phone Number]
+       [+8801680350329]
       </p>
       <p class="text-gray-600 mt-2">
        <i class="fas fa-map-marker-alt mr-2">
