--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       [MD Mahfiz Kaif]
      </h1>
      <p class="text-blue-200 text-lg">
-      [An University Student]
+      Programmer
      </p>
     </div>
     <div class="md:w-2/3 p-6">
