--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="md:w-1/3 bg-blue-600 p-6 flex flex-col items-center justify-center">
      <img alt="Profile picture of [Your Name] in a professional attire" class="rounded-full mb-4" height="150" src="https://storage.googleapis.com/a1aa/image/rYmyS9i2qsR_-70x40CJ2vc7SRAwbQGcElV6LjKDW54.jpg" width="150"/>
      <h1 class="text-white text-3xl font-bold">
-      [MD Mahfiz Kaif]
+       MD Mahfiz Kaif
      </h1>
      <p class="text-blue-200 text-lg">
       Programmer
@@ -38,7 +38,7 @@
       <p class="text-gray-600 mt-2">
        <i class="fas fa-map-marker-alt mr-2">
        </i>
-       [Your Address]
+       [Sherpur,Mymensing,Bangladesh]
       </p>
      </div>
      <div class="mb-4">
