--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </h2>
       <ul class="list-disc list-inside text-gray-600 mt-2">
        <li>
-        [Skill 1]
+        [MS Office]
        </li>
        <li>
         [Skill 2]
