--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="max-w-4xl mx-auto bg-white shadow-lg rounded-lg overflow-hidden mt-10">
    <div class="flex flex-col md:flex-row">
     <div class="md:w-1/3 bg-blue-600 p-6 flex flex-col items-center justify-center">
-     <img alt="Profile picture of MD Mahfiz Kaif in a professional attire" class="rounded-full mb-4" height="150" src="https://storage.googleapis.com/a1aa/image/rYmyS9i2qsR_-70x40CJ2vc7SRAwbQGcElV6LjKDW54.jpg" width="150"/>
+     <img alt="Profile picture of MD Mahfiz Kaif in a professional attire" class="rounded-full mb-4" height="150" src="https://assets.onecompiler.app/43ausgzbg/43duqvgxb/IMG_20230513_010409_753.jpg" width="150"/>
      <h1 class="text-white text-3xl font-bold">
        MD Mahfiz Kaif
      </h1>
