--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
       <p class="text-gray-600 mt-2">
        <i class="fas fa-envelope mr-2">
        </i>
-       [mahmudamahir1982@gmail.com]
+       mahmudamahir1982@gmail.com
       </p>
       <p class="text-gray-600 mt-2">
        <i class="fas fa-phone mr-2">
        </i>
-       [+8801680350329]
+       +8801680350329
       </p>
       <p class="text-gray-600 mt-2">
        <i class="fas fa-map-marker-alt mr-2">
        </i>
-       [Sherpur,Mymensing,Bangladesh]
+       Sherpur,Mymensing,Bangladesh
       </p>
      </div>
      <div class="mb-4">
@@ -54,10 +54,10 @@
       </h2>
       <ul class="list-disc list-inside text-gray-600 mt-2">
        <li>
-        [MS Office]
+        MS Office
        </li>
        <li>
-        [Skill 2]
+        Programmer
        </li>
        <li>
         [Skill 3]
