--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
       </h2>
       <div class="mt-2">
        <h3 class="text-xl font-semibold text-gray-700">
-        [Degree]
+        Higher Secondary Certificate (HSC) - Science
        </h3>
        <p class="text-gray-600">
-        [Institution Name] - [Graduation Year]
+        Nabarun Public School - [Graduation Year]
        </p>
        <p class="text-gray-600 mt-1">
         [A brief description of your coursework or any honors received.]
